recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:6: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
  	else{hexaKoch(levels-1,length*0,14);
                     ^HexaKoch:8: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
       hexaKoch(levels-1,length*0,14);
               ^HexaKoch:10: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
       hexaKoch(levels-1,length*0,14);
               ^HexaKoch:12: error: not found: value pentaKoch
       pentaKoch(levels-1,length*0.4);
       ^HexaKoch:14: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
       hexaKoch(levels-1,length*0,14);
               ^HexaKoch:16: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
       hexaKoch(levels-1,length*0,14);
               ^HexaKoch:18: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
			 hexaKoch(levels-1,length*0,14);
                                 ^